fix: don't add overflow to child elements

--- a/styles/atom-ide-datatips.less
+++ b/styles/atom-ide-datatips.less
@@ -96,7 +96,6 @@
 }
 
 .datatip-markdown-container {
-  overflow: auto;
   color: @syntax-text-color;
   font-family: var(--editor-font-family);
   font-size: var(--editor-font-size);
